--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "https://www.linkedin.com/in/vraj-belani-1aa18115b/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
