--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ author:
   impactstory      : # URL
   orcid            : # URL
   semantic         : # URL
-  pubmed           : "# URL
+  pubmed           : # URL
   researchgate     : # URL
   scopus           : # URL
 
