--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Vraj Belani"
   pronouns         : "He/Him"
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Current junior at UH"
   location         : "Houston, TX"
   employer         : "University Of Houston"
   uri              : https://www.uh.edu/nsm/computer-science/
